<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#02000000"
    tools:context="app.bunchoffools.codenicely.bunchoffools.splash_screen.view.SplashScreenActivity"
    android:weightSum="10"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:src="@drawable/logo"
        android:layout_weight="1"
        />

    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tagLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:layout_marginTop="48dp"
        android:textSize="24dp"
        android:padding="16dp"
        android:layout_weight="2"
        android:textColor="@color/colorAccent"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        />

    <TextView
        android:layout_marginTop="48dp"
        android:layout_gravity="bottom"
        android:id="@+id/developers"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed"
        android:visibility="gone"
        />

    <TextView
        android:layout_marginTop="48dp"
        android:id="@+id/codeNicely"
        android:textColor="@color/black_100_percent"
        android:gravity="center"
        android:textSize="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codenicely"
        android:layout_weight="3"
        />
</LinearLayout>
